devel/cleanup: renamed 'phpui.event_user_required' to 'timetable.event_user_required'

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -160,6 +160,7 @@ version 28-git (????-??-??):
     to 'timetable.hide_disabled_users' and 'timetable.hide_deleted_users' [chilan]
   - devel/cleanup: renamed 'phpui.timetable_hide_description' to 'timetable.hide_description' [chilan]
   - devel/cleanup: renamed 'phpui.event_time_step' to 'timetable.event_time_step' [chilan]
+  - devel/cleanup: renamed 'phpui.event_user_required' to 'timetable.event_user_required' [chilan]
 
 version 27.0 (2021-08-20):
 
