--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -174,6 +174,7 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.helpdesk_customer_notify' to 'rt.customer_notify' [chilan]
   - devel/cleanup: renamed 'phpui.helpdesk_sender_name' and 'phpui.helpdesk_sender_email'
     to 'rt.sender_name' and 'rt.sender_email' [chilan]
+  - devel/cleanup: renamed 'helpdesk_notification_attachments' to 'rt.notification_attachments' [chilan]
 
 version 27.0 (2021-08-20):
 
