devel/cleanup: renamed 'phpui.helpdesk_allow_change_ticket_state_from_open_to_new' to 'rt.allow_change_ticket_state_from_open_to_new'

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -181,6 +181,8 @@ version 28-git (????-??-??):
     to 'rt.additional_user_permission_checks' [chilan]
   - devel/cleanup: renamed 'phpui.helpdesk_allow_all_users_modify_deadline'
     to 'rt.allow_all_users_modify_deadline' [chilan]
+  - devel/cleanup: renamed 'phpui.helpdesk_allow_change_ticket_state_from_open_to_new'
+    to 'rt.allow_change_ticket_state_from_open_to_new' [chilan]
 
 version 27.0 (2021-08-20):
 
