--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -184,6 +184,8 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.helpdesk_allow_change_ticket_state_from_open_to_new'
     to 'rt.allow_change_ticket_state_from_open_to_new' [chilan]
   - devel/cleanup: renamed 'phpui.helpdesk_backend_mode' to 'rt.backend_mode' [chilan]
+  - devel/cleanup: renamed 'phpui.helpdesk_block_ticket_close_with_open_events'
+    to 'rt.block_ticket_close_with_open_events' [chilan]
 
 version 27.0 (2021-08-20):
 
