--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -189,6 +189,7 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.helpdesk_check_owner_verifier_conflict'
     to 'rt.check_owner_verifier_conflict' [chilan]
   - devel/cleanup: renamed 'phpui.helpdesk_notify' to 'rt.notify' [chilan]
+  - devel/cleanup: renamed 'phpui.helpdesk_reply_body' to 'rt.reply_body' [chilan]
 
 version 27.0 (2021-08-20):
 
