--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -198,6 +198,7 @@ version 28-git (????-??-??):
     and 'phpui.helpdesk_customerinfo_sms_body' to 'rt.notification_mail_body_customerinfo_format'
     and 'rt.notification_sms_body_customerinfo_format' [chilan]
   - devel/cleanup: renamed 'phpui.helpdesk_customerinfo' to 'rt.notification_customerinfo' [chilan]
+  - devel/cleanup: renamed 'phpui.helpdesk_stats' to 'rt.show_stats' [chilan]
 
 version 27.0 (2021-08-20):
 
