--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -202,6 +202,8 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.newticket_notify' to 'rt.new_ticket_notify' [chilan]
   - devel/cleanup: renamed 'phpui.helpdesk_customer_notification_mail_subject'
     to 'rt.customer_notification_mail_subject' [chilan]
+  - devel/cleanup: renamed 'phpui.default_show_closed_tickets'
+    to 'rt.default_show_closed_tickets' [chilan]
 
 version 27.0 (2021-08-20):
 
