--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -204,6 +204,8 @@ version 28-git (????-??-??):
     to 'rt.customer_notification_mail_subject' [chilan]
   - devel/cleanup: renamed 'phpui.default_show_closed_tickets'
     to 'rt.default_show_closed_tickets' [chilan]
+  - devel/cleanup: renamed 'phpui.category_adjustments_in_ticketedit'
+    to 'rt.category_adjustments_in_ticketedit' [chilan]
 
 version 27.0 (2021-08-20):
 
