--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -212,6 +212,8 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.ticketlist_pagelimit', 'phpui.ticketlist_priority'
     and 'phpui.ticketlist_status' to 'rt.ticketlist_pagelimit', 'rt.ticketlist_priority'
     and 'rt.ticketlist_status' [chilan]
+  - devel/cleanup: renamed 'phpui.allow_modify_closed_events_newer_than'
+    to 'timetable.allow_modify_closed_events_newer_than' [chilan]
 
 version 27.0 (2021-08-20):
 
