--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -214,6 +214,8 @@ version 28-git (????-??-??):
     and 'rt.ticketlist_status' [chilan]
   - devel/cleanup: renamed 'phpui.allow_modify_closed_events_newer_than'
     to 'timetable.allow_modify_closed_events_newer_than' [chilan]
+  - devel/cleanup: renamed 'phpui.default_show_closed_events'
+    to 'timetable.default_show_closed_events' [chilan]
 
 version 27.0 (2021-08-20):
 
