--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -222,6 +222,7 @@ version 28-git (????-??-??):
     frontend [chilan]
   - enhancement: userpanel/documents: multiple email addresses can be entered in operator
     notification address list settings and special symbol '%creatoremail%' support [chilan]
+  - enhancement: added 'deleted tickets' filter in rtqueuelist module [chilan]
 
 version 27.0 (2021-08-20):
 
