enhancement: new LMSFpdiBackend allows to easily merge/unite many PDF contents (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -231,6 +231,7 @@ version 28-git (????-??-??):
   - enhancement: phone billing type basing on customer subconsents support added [chilan]
   - enhancement: impelemented document/assignment expiration filters in new message form [chilan]
   - enhancement: added info property to voip numbers [chilan]
+  - enhancement: new LMSFpdiBackend allows to easily merge/unite many PDF contents [chilan]
 
 version 27.0 (2021-08-20):
 
