--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -238,6 +238,8 @@ version 28-git (????-??-??):
     'payments.invoice_billing_description' configuration variable [chilan]
   - improvement: 'phpui.ignore_deleted_customers' ('false' by default) allows to hide deleted
     customers from lists by default [chilan]
+  - improvement: 'phpui.show_due_balance' (with 'false' as default value) enables
+    presentation of due/expired balance in customer info box [chilan]
 
 version 27.0 (2021-08-20):
 
