--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -240,6 +240,7 @@ version 28-git (????-??-??):
     customers from lists by default [chilan]
   - improvement: 'phpui.show_due_balance' (with 'false' as default value) enables
     presentation of due/expired balance in customer info box [chilan]
+  - enhancement: search network devices by their mac addresses [chilan]
 
 version 27.0 (2021-08-20):
 
