--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -241,6 +241,8 @@ version 28-git (????-??-??):
   - improvement: 'phpui.show_due_balance' (with 'false' as default value) enables
     presentation of due/expired balance in customer info box [chilan]
   - enhancement: search network devices by their mac addresses [chilan]
+  - improvement: network device status presentation using different icons in quick search
+    suggestion popup [chilan]
 
 version 27.0 (2021-08-20):
 
