enhancement: added 'trunk' flag for voip accounts (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -246,6 +246,7 @@ version 28-git (????-??-??):
   - enhancement: lms-notify.php: implemented event type selection for which customer and user
     notifications should be generated [chilan]
   - enhancement: added default flag to cash import sources [chilan]
+  - enhancement: added 'trunk' flag for voip accounts [chilan]
 
 version 27.0 (2021-08-20):
 
