--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -254,6 +254,9 @@ version 28-git (????-??-??):
     to full minutes [chilan]
   - enhancement: customer list: added customer group logical operator selection connecting selected
     customer groups [chilan]
+  - devel/cleanup: renamed 'phpui.document_type' to 'documents.type' [chilan]
+  - devel/cleanup: renamed 'phpui.document_margins' to 'documents.margins' [chilan]
+  - devel/cleanup: renamed 'phpui.cache_documents' to 'documents.cache' [chilan]
 
 version 27.0 (2021-08-20):
 
