--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -257,7 +257,8 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.document_type' to 'documents.type' [chilan]
   - devel/cleanup: renamed 'phpui.document_margins' to 'documents.margins' [chilan]
   - devel/cleanup: renamed 'phpui.cache_documents' to 'documents.cache' [chilan]
-  - enhancement: introduced alternative name for customer (important for brands/shortnames/casual names) [interduo]
+  - enhancement: introduced alternative name for customer
+    (important for brands/shortnames/casual names) [interduo]
 
 version 27.0 (2021-08-20):
 
