--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -259,6 +259,8 @@ version 28-git (????-??-??):
   - devel/cleanup: renamed 'phpui.cache_documents' to 'documents.cache' [chilan]
   - enhancement: introduced alternative name for customer
     (important for brands/shortnames/casual names) [interduo]
+  - improvement: '@' prefix in customer quick search field means force searching
+    by altname [chilan]
 
 version 27.0 (2021-08-20):
 
