--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -268,6 +268,7 @@ version 28-git (????-??-??):
     and icn properties [chilan]
   - enhancement: added service start date in new document form - it has impact on
     "from" date of newly created assignments [chilan]
+  - enhancement: added billing record type support (call, sms, mms, data transfer) [chilan]
 
 version 27.0 (2021-08-20):
 
