--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -277,6 +277,8 @@ version 28-git (????-??-??):
   - enhancement: 'phpui.default_address_state', 'phpui.default_billing_address_state',
     'phpui.default_postal_address_state' and 'phpui.default_location_address_state'
     control state preselection in location boxes and terit address popup window [chilan]
+  - devel/cleanup: renamed 'phpui.document_password' and 'phpui.document_protection_comand'
+    to 'documents.protection_password' and 'documents.protection_command' [chilan]
 
 version 27.0 (2021-08-20):
 
