--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -279,6 +279,8 @@ version 28-git (????-??-??):
     control state preselection in location boxes and terit address popup window [chilan]
   - devel/cleanup: renamed 'phpui.document_password' and 'phpui.document_protection_command'
     to 'documents.protection_password' and 'documents.protection_command' [chilan]
+  - enhancement: allow to assign events with netnodes and netdevices [interduo]
+  - enhancement: implement {network_device_selection} & {network_node_selection} smarty function [interduo]
 
 version 27.0 (2021-08-20):
 
