--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -312,6 +312,8 @@ version 28-git (????-??-??):
   - enhancement: 'phpui.node_password_required_for_auth_type' controls which authentication/access types
     set for nodes require node password to be specified ('all' as default value) [chilan]
   - improvement: some invoice item visibility depends on invoice pay type [chilan]
+  - enhancement: lms-sendinvoices.php backend script supports --single-file parameter which causes making
+    backup to single 'output.pdf' file in directory specified with --output-directory parameter [chilan]
 
 version 27.0 (2021-08-20):
 
